# geoengine

./: .dockerignore  .gitignore  .sqlfluff  CHANGELOG.md  CODESTYLE.md  CONTRIBUTING.md  Cargo.lock.old  Cargo.toml  LICENSE  README.md  Settings-default.toml  Settings-test.toml  architecture.mmd  benches.ipynb  bors.toml  ci.justfile  cliff.toml  clippy.toml  common.justfile  dev.Dockerfile  justfile  openapi.json  q16.csv  q4.csv  q8.csv  raster_0.tiff  raster_1.tiff  raster_2.tiff  repository.justfile  rust-toolchain  rust-toolchain.toml  rust.yml  start_with_fresh_postgres.sh  test.http
api/: Cargo.toml  README.md
api/src/: lib.rs  parameters.rs
api/src/processes/: mod.rs  processing.rs  source.rs
cli/: Cargo.toml
cli/src/: check_successful_startup.rs  lib.rs
common/: Cargo.toml  README.md
common/src/: lib.rs
common/src/config/: mod.rs
datatypes/: Cargo.toml  LICENSE  README.md
datatypes/benches/: grid_mapping.rs  grid_updates.rs  masked_grid_mapping.rs  multi_point_collection.rs  reprojection.rs
datatypes/examples/: vega-area.rs  vega-histogram.rs  vega-scatter.rs  vega.rs
datatypes/src/: dataset.rs  error.rs  identifiers.rs  lib.rs  machine_learning.rs  ml_model.rs  projection.rs  provenance.rs  spatial_reference.rs
datatypes/src/collections/: batch_builder.rs  data_collection.rs  data_types.rs  error.rs  feature_collection.rs  feature_collection_builder.rs  feature_collection_impl.rs  feature_collection_struct.rs  geo_feature_collection.rs  ipc.rs  mod.rs  multi_line_collection.rs  multi_line_string_collection.rs  multi_point_collection.rs  multi_polygon_collection.rs
datatypes/src/operations/: filterable.rs  mod.rs  reproject.rs  spatial_relation.rs
datatypes/src/plots/: area_line_plot.rs  bar_chart.rs  box_plot.rs  histogram.rs  histogram2d.rs  mod.rs  multi_line_plot.rs  pie_chart.rs  scatter_plot.rs
datatypes/src/primitives/: bounding_box.rs  circle.rs  coordinate.rs  datetime.rs  db_types.rs  error.rs  feature_data.rs  geometry.rs  line.rs  measurement.rs  mod.rs  multi_line_string.rs  multi_point.rs  multi_polygon.rs  no_geometry.rs  query_rectangle.rs  spatial_partition.rs  spatial_resolution.rs  time_dimension.rs  time_gap_fill_iter.rs  time_instance.rs  time_interval.rs  time_step.rs  time_tick.rs  ttl.rs
datatypes/src/pro/: mod.rs
datatypes/src/raster/: arrow_conversion.rs  band_names.rs  base_raster.rs  data_type.rs  db_types.rs  empty_grid.rs  geo_transform.rs  grid.rs  grid_array.rs  grid_array_typed.rs  grid_bounds.rs  grid_dimension.rs  grid_index.rs  grid_or_empty.rs  grid_spatial.rs  grid_traits.rs  grid_typed.rs  helpers.rs  macros_raster.rs  macros_raster_tile.rs  masked_grid.rs  mod.rs  no_data_grid.rs  no_data_value_grid.rs  raster.rs  raster_metadata.rs  raster_properties.rs  raster_tile.rs  raster_traits.rs  signed_grid_dimension.rs  tiling.rs  typed_raster.rs  typed_raster_conversion.rs  typed_raster_tile.rs  util.rs
datatypes/src/util/: any.rs  arrow.rs  byte_size.rs  db_types.rs  gdal.rs  geodesy_projector.rs  helpers.rs  identifiers.rs  image.rs  mixed_projector.rs  mod.rs  proj_projector.rs  ranges.rs  test.rs  time_step_iter.rs  well_known_data.rs
datatypes/tests/: example-arrow.rs
expression/: Cargo.toml
expression/deps-workspace/: Cargo.toml  lib.rs
expression/src/: codegen.rs  compiled.rs  dependencies.rs  error.rs  functions.rs  lib.rs  parser.rs  util.rs
expression/tests/: check-expression-deps.rs
geoengine/operators/: Cargo.toml  README.md
geoengine/operators/benches/: ci_operators.rs  gdal_source_operator_bench.rs  new_raster_cache.rs
macros/: Cargo.toml
macros/src/: lib.rs  testing.rs  typetag.rs  util.rs
operators/: .gitignore  Cargo.toml  LICENSE  MOD13A2_M_NDVI_2014-04-01_tile-20_v2.tif  MOD13A2_M_NDVI_2014-04-01_tile-20_v3.rst  logs.csv
operators/benches/: bands.rs  cache.rs  cache_concurrent.rs  ci_operators.rs  expression.rs  grid_compression.rs  operator_names.rs  pip.rs  query_chunks.rs  sources.rs  thread_pool.rs  thread_pool_forked.rs  thread_pool_mp.rs  util.rs  workflows.rs
operators/benches_old/: cache_concurrent.rs
operators/examples/: dataset_reuse.rs  thread_pool.rs
operators/src/: engine.rs  engine_old.rs  error.rs  lib.rs  operators.rs  util.rs
operators/tests/: datafusion.rs  streams.rs
python/: .gitignore  .pylintrc  README.md  check.sh  justfile  mypy.ini  pyproject.toml  test_all_notebooks.py  test_notebook.py
python/examples/: add_public_raster_dataset.ipynb  add_public_vector_dataset.ipynb  band_neighborhood_aggregate.ipynb  colorizer.ipynb  data_usage.ipynb  expression.ipynb  interpolation.ipynb  layers.ipynb  ml_pipeline.ipynb  multiband_raster_stream.ipynb  ndvi_ports.ipynb  permissions.ipynb  plots.ipynb  quota.ipynb  raster_dataset.ipynb  raster_download.tif  raster_stream.ipynb  raster_stream_to_gdal.ipynb  upload.ipynb  vector_stream.ipynb  wcs.ipynb  wms.ipynb
python/geoengine/: __init__.py  api.py  auth.py  backports.py  colorizer.py  datasets.py  error.py  layers.py  ml.py  permissions.py  raster.py  raster_workflow_rio_writer.py  resource_identifier.py  tasks.py  types.py  util.py  workflow.py
python/tests/: __init__.py  ge_test.py  test_auth.py  test_colorizer.py  test_data_usage.py  test_datasets.py  test_layers.py  test_ml.py  test_plot.py  test_provenance.py  test_raster.py  test_tasks.py  test_types.py  test_upload.py  test_util.py  test_wcs.py  test_wfs.py  test_wms.py  test_workflow_builder_blueprints.py  test_workflow_builder_operators.py  test_workflow_raster_stream.py  test_workflow_storage.py  test_workflow_vector_stream.py  util.py
services/: Cargo.toml  build.rs  foo.txt  ndvi_tiles.json  test.http
services/benches/: quota_check.rs  tiled_gdal_source.rs
services/examples/: force-import.rs  import_netcdf.rs  ndvi_remote.rs  openlayers-wms.rs  openlayers.rs  request.rs  tile_import.rs  wildlife_auth.rs  wildlife_datasets.rs  wildlife_portal.rs
services/src/: apidoc.rs  config.rs  error.rs  lib.rs  server.rs  util.rs
services/test-data/: raster
services/tests/: drivers.rs  openapi.rs  startup.rs
src/: error.rs  (+3 more)
(+4754 files in other folders)
