[workspace]
members = ["datatypes", "expression", "macros", "operators", "services"]
# Edition 2021 defaults to resolver 2, but virtul workspaces default to resolver 1, so we need to set it explicitly.
resolver = "2"

[workspace.package]
version = "0.8.0"
authors = [
    "Christian Beilschmidt <beilschmidt@mathematik.uni-marburg.de>",
    "Johannes Drönner <droenner@mathematik.uni-marburg.de>",
    "Michael Mattig <mattig@mathematik.uni-marburg.de>",
]
edition = "2021"
publish = false
license-file = "LICENSE"
documentation = "https://docs.geoengine.io"
repository = "https://github.com/geo-engine/geoengine"

# Rust does not inline across crates if link-time optimization (LTO) is off, which it is by default.
# TODO: Maybe https://rust-lang.github.io/rust-clippy/stable/index.html#missing_inline_in_public_items is more suitable
[profile.release]
lto = true

[workspace.lints.clippy]
# configure default clippy lints
complexity = { level = "warn", priority = 0 }
style = { level = "warn", priority = 0 }
perf = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
correctness = "deny"

# disable some pedantic lints
result_large_err = { level = "allow", priority = 1 }          # TODO: investigate this
cast_possible_truncation = { level = "allow", priority = 1 }
cast_possible_wrap = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
default_trait_access = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
module_name_repetitions = { level = "allow", priority = 1 }
must_use_candidate = { level = "allow", priority = 1 }
non_ascii_literal = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
similar_names = { level = "allow", priority = 1 }
single_match_else = { level = "allow", priority = 1 }
type_repetition_in_bounds = { level = "allow", priority = 1 }
wildcard_imports = { level = "allow", priority = 1 }

# enable some restriction lints
dbg_macro = { level = "warn", priority = 1 }
print_stderr = { level = "warn", priority = 1 }
print_stdout = { level = "warn", priority = 1 }
unimplemented = { level = "warn", priority = 1 }
unwrap_used = { level = "warn", priority = 1 }

[workspace.dependencies]
actix = { version = "0.13", default-features = false }
actix-files = "0.6"
actix-http = "3.6"
actix-multipart = "0.7"
actix-rt = "2.9"
actix-web = "4.5"
actix-web-actors = "4.3"
actix-web-httpauth = "0.8"
aes-gcm = "0.10.3"
anyhow = "1.0"
approx = "0.5"
arrow = "53.0"
arrow-array = "53.0"
arrow-ord = "53.0"
arrow-schema = "53"
aruna-rust-api = "2.0.0-beta.12"
assert-json-diff = "2.0.2"
assert_cmd = "2.0"
async-stream = "0.3"
async-trait = "0.1"
base64 = "0.22"
bb8-postgres = "0.8"
bytes = "1.5"
chrono = "0.4"
config = "0.14"
convert_case = "0.6.0"
criterion = "0.5"
csv = "1.3"
derive_builder = "0.20"
erased-serde = "0.4"
fallible-iterator = "0.2"
flexi_logger = "0.29"
futures = "0.3"
futures-util = "0.3"
gdal = "0.17"
gdal-sys = "0.10"
geo = "0.29.1"
geo-rand = { git = "https://github.com/lelongg/geo-rand", tag = "v0.3.0" }
geojson = "0.24"
httptest = "0.16.1"
image = "0.25"
itertools = "0.13"
libloading = "0.8"
log = "0.4"
lru = "0.12"
lz4_flex = "0.11"
mime = "0.3"
ndarray = "0.16"
num = "0.4"
num-traits = "0.2"
oauth2 = "4.4.2"
openidconnect = "3.4"
opentelemetry = { version = "0.24", default-features = false }
opentelemetry-otlp = "0.17"
opentelemetry_sdk = "0.24"
ordered-float = "4.2"
ort = "2.0.0-rc.2"
ouroboros = "0.18"
paste = "1.0"
pbkdf2 = "0.12.2"
pest = "2.7"
pest_derive = "2.7"
pin-project = "1.1"
postgres-protocol = "0.6.6"
postgres-types = "0.2"
pretty_assertions = "1.4"
prettyplease = "0.2"
proc-macro2 = "1.0"
proj = "0.22"
proj-sys = "0.19"
prost = "0.12.3"
pwhash = "1.0"
quote = "1.0"
rand = "0.8"
rayon = "1.8"
reqwest = "0.11"
rustc-hash = { version = "2.0", default-features = false }
serde = "1.0"
serde_json = "1.0"
serde_path_to_error = "0.1"
serde_urlencoded = "0.7"
serde_with = "3.6"
serial_test = "3.0"
sha2 = "0.10.8"
snafu = "0.8"
stac = "0.7"
stream-cancel = "0.8"
strum = "0.26"
strum_macros = "0.26"
syn = "2.0"
tempfile = "3.10"
time = "0.3"
tokio = "1.36"
tokio-postgres = "0.7"
tonic = "0.11.0"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.25"
tracing-subscriber = "0.3"
typetag = "0.2"
url = "2.5"
utoipa = "4.2"
utoipa-swagger-ui = "7.1"
uuid = "1.7"
validator = "0.18"
vergen = "9.0"
vergen-gitcl = "1.0"
walkdir = "2.4"
wkt = "0.11"
xml-rs = "0.8"
zip = "2.1"
float-cmp = "0.9.0"
