[package]
name = "geoengine-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true
# build = "build.rs"
# default-run = "geoengine-server"

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
geoengine-datatypes = { path = "../datatypes" }
geoengine-macros = { path = "../macros" }
geoengine-operators = { path = "../operators" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }

[lints]
workspace = true
