[package]
name = "geoengine-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_derive.workspace = true
tokio.workspace = true

[lints]
workspace = true
