[package]
name = "geoengine-datatypes"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true

[features]
# This compiles Geo Engine Pro
pro = []

[dependencies]
arrow = { version = "50.0", features = ["ipc_compression"] }
arrow-array = "50.0"
arrow-ord = "50.0"
bytes = "1.5" # for postgres-types impls
chrono = "0.4"
fallible-iterator = "0.2" # only for postgres-protocol
float-cmp = "0.9"
gdal = "0.16"
geo = "0.27"
geojson = "0.24"
image = "0.25"
num = "0.4"
num-traits = "0.2"
ordered-float = { version = "4.2", features = ["serde"] }
paste = "1.0"
postgres-protocol = { version = "0.6" }
postgres-types = { version = "0.2", features = [
    "array-impls",
    "derive",
    "with-chrono-0_4",
    "with-uuid-1",
] }
proj = "0.22" # needs to stay fixed to use fixed proj version
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6"
snafu = "0.8"
uuid = { version = "1.7", features = ["serde", "v4", "v5"] }
wkt = "0.11"
strum = { version = "0.26", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
tempfile = "3.12"

[[bench]]
name = "multi_point_collection"
harness = false

[[bench]]
name = "grid_mapping"
harness = false

[[bench]]
name = "grid_updates"
harness = false

[[bench]]
name = "masked_grid_mapping"
harness = false

[lints]
workspace = true
