[package]
name = "geoengine-datatypes"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true

[features]

[dependencies]
arrow = { workspace = true, features = ["ipc_compression"] }
arrow-array = { workspace = true }
arrow-ord = { workspace = true }
arrow-schema = { workspace = true, features = ["serde"] }
bytes = { workspace = true } # for postgres-types impls
chrono = { workspace = true }
fallible-iterator = { workspace = true } # only for postgres-protocol
float-cmp = { workspace = true }
gdal = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
image = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
paste = { workspace = true }
postgres-protocol = { workspace = true }
postgres-types = { workspace = true, features = [
    "array-impls",
    "derive",
    "with-chrono-0_4",
    "with-uuid-1",
] }
proj = { workspace = true } # needs to stay fixed to use fixed proj version
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
snafu = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
wkt = { workspace = true }
strum = { workspace = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "multi_point_collection"
harness = false

[[bench]]
name = "grid_mapping"
harness = false

[[bench]]
name = "grid_updates"
harness = false

[[bench]]
name = "masked_grid_mapping"
harness = false

[lints]
workspace = true
