[package]
name = "geoengine-datatypes"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true

[features]

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-ord = { workspace = true }
arrow-schema = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
fallible-iterator = { workspace = true }
float-cmp = { workspace = true }
gdal = { workspace = true }
geo = { workspace = true }
geojson = { workspace = true }
image = { workspace = true }
num = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
paste = { workspace = true }
postgres-protocol = { workspace = true }
postgres-types = { workspace = true }
proj = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
snafu = { workspace = true }
uuid = { workspace = true }
wkt = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "multi_point_collection"
harness = false

[[bench]]
name = "grid_mapping"
harness = false

[[bench]]
name = "grid_updates"
harness = false

[[bench]]
name = "masked_grid_mapping"
harness = false

[lints]
workspace = true
