[package]
name = "geoengine-expression"
version = "0.1.0"
edition = "2021"

[dependencies]
cargo = "0.76"
geoengine-expression-deps = { path = "deps-workspace" }
libloading = "0.8"
log = "0.4"
pest = "2.1"
pest_derive = "2.1"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
snafu = "0.8"
syn = "2.0"
tempfile = "3.2"

[dev-dependencies]
geo = "0.27.0"
pretty_assertions = "1.4"
