[package]
name = "geoengine-expression"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
cargo = "0.77"
geoengine-expression-deps = { path = "deps-workspace" }
libloading = "0.8"
log = "0.4"
pest = "2.7"
pest_derive = "2.7"
prettyplease = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
snafu = "0.8"
syn = "2.0"
tempfile = "3.10"

[dev-dependencies]
geo = "0.27.0"
pretty_assertions = "1.4"

[lints]
workspace = true
