[package]
name = "geoengine-expression"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
geoengine-expression-deps = { path = "deps-workspace" }
libloading = { workspace = true }
log = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
snafu = { workspace = true }
syn = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
geo = { workspace = true }
pretty_assertions = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
