[package]
name = "geoengine-operators"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true

[features]
# This compiles Geo Engine Pro
pro = ["geoengine-datatypes/pro", "dep:xgboost-rs"]

[dependencies]
arrow = { version = "49.0" } # TODO: activate SIMD when stable
async-trait = "0.1"
bytes = "1.0" # for postgres-types impls
chrono = "0.4"
crossbeam = "0.8"
csv = "1.1"
fallible-iterator = "0.2" # only for postgres-protocol
float-cmp = "0.9"
futures = "0.3"
gdal = "0.16"
gdal-sys = "0.9"
geo = "0.27"
geoengine-datatypes = { path = "../datatypes" }
geoengine-expression = { path = "../expression" }
itertools = "0.12"
libloading = "0.8"
log = "0.4"
lru = "0.12"
lz4_flex = { version = "0.11" }
num-traits = "0.2"
num = "0.4"
ouroboros = "0.18"
ordered-float = { version = "4.1", features = ["serde"] }
paste = "1.0"
pin-project = "1.0"
postgres-protocol = "0.6.3"
postgres-types = { version = "0.2", features = [
  "derive",
  "with-chrono-0_4",
  "with-uuid-1",
] }
rayon = "1.5"
rustc-hash = { version = "1.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.8"
stream-cancel = "0.8"
tempfile = "3.1"
tokio = { version = "1.15", features = [
  "macros",
  "signal",
  "sync",
  "rt-multi-thread",
  "time",
] }
tracing = "0.1"
tracing-opentelemetry = "0.22"
typetag = "0.2"
uuid = { version = "1.1", features = ["serde", "v4", "v5"] }
xgboost-rs = { version = "0.3", optional = true }

[dev-dependencies]
async-stream = "0.3"
geo-rand = { git = "https://github.com/lelongg/geo-rand", tag = "v0.3.0" }
httptest = "0.15.2"
ndarray = "0.15"
tracing-subscriber = { version = "0.3", features = ["json"] }
rand = "0.8"
serial_test = "2.0"

[[bench]]
name = "bands"
harness = false

[[bench]]
name = "cache"
harness = false
required-features = ["pro"]

[[bench]]
name = "cache_concurrent"
harness = false
required-features = ["pro"]

[[bench]]
name = "expression"
harness = false

[[bench]]
name = "workflows"
harness = false

[[bench]]
name = "thread_pool"
harness = false

[[bench]]
name = "pip"
harness = false

[[bench]]
name = "query_chunks"
harness = false
required-features = ["pro"]

[lints]
workspace = true
