[package]
name = "geoengine-operators"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
bb8-postgres = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
float-cmp = { workspace = true }
futures = { workspace = true }
gdal = { workspace = true }
gdal-sys = { workspace = true }
geo = { workspace = true }
geoengine-datatypes = { path = "../datatypes" }
geoengine-expression = { path = "../expression" }
itertools = { workspace = true }
libloading = { workspace = true }
tracing = { workspace = true }
lru = { workspace = true }
lz4_flex = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num = { workspace = true }
ouroboros = { workspace = true }
ordered-float = { workspace = true }
ort = { workspace = true }
paste = { workspace = true }
pin-project = { workspace = true }
postgres-protocol = { workspace = true }
postgres-types = { workspace = true }
rayon = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
stream-cancel = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
typetag = { workspace = true }
uuid = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }
approx = { workspace = true }
geo-rand = { workspace = true }
httptest = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
rand = { workspace = true, features = ["small_rng"] }

[[bench]]
name = "bands"
harness = false

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "cache_concurrent"
harness = false

[[bench]]
name = "expression"
harness = false

[[bench]]
name = "thread_pool"
harness = false

[[bench]]
name = "pip"
harness = false

[[bench]]
name = "query_chunks"
harness = false

[lints]
workspace = true
