[package]
name = "geoengine-services"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true
license-file.workspace = true
documentation.workspace = true
repository.workspace = true
build = "build.rs"

[features]
# This compiles Geo Engine Pro
pro = ["geoengine-macros/pro"]

[dependencies]
actix = { workspace = true }
actix-files = { workspace = true }
actix-http = { workspace = true, features = ["ws"] }
actix-multipart = { workspace = true }
actix-rt = { workspace = true }
actix-web = { workspace = true }
actix-web-actors = { workspace = true }
actix-web-httpauth = { workspace = true }
aes-gcm = { workspace = true }
aruna-rust-api = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bb8-postgres = { workspace = true, features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
config = { workspace = true }
derive_builder = { workspace = true }
erased-serde = { workspace = true }
flexi_logger = { workspace = true, features = ["trc"] }
float-cmp = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
gdal = { workspace = true }
gdal-sys = { workspace = true }
geo = { workspace = true }
geoengine-datatypes = { path = "../datatypes" }
geoengine-macros = { path = "../macros" }
geoengine-operators = { path = "../operators" }
geojson = { workspace = true, features = ["geo-types"] }
itertools = { workspace = true }
log = { workspace = true }
mime = { workspace = true }
oauth2 = { workspace = true }
openidconnect = { workspace = true }
# `opentelemetry` version has to be compatible with `tracing-opentelemetry` & `opentelemetry-*`
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
ordered-float = { workspace = true, features = ["serde"] }
num-traits = { workspace = true }
pbkdf2 = { workspace = true }
postgres-types = { workspace = true, features = ["derive", "array-impls"] }
proj = { workspace = true } # needs to stay fixed to use fixed proj version
proj-sys = { workspace = true } # needs to stay fixed to use fixed proj version
pwhash = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart", "stream"] } # has to match with `oauth`
serde = { workspace = true, features = ["derive", "rc"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_with = { workspace = true }
snafu = { workspace = true }
stac = { workspace = true }
stream-cancel = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros", "fs", "signal", "sync", "rt-multi-thread"] }
tokio-postgres = { workspace = true }
tonic = { workspace = true, features = ["tls", "tls-roots"] } # must be compatible with `aruna-rust-api`
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["local-time", "ansi", "tracing-log"] }
typetag = { workspace = true }
url = { workspace = true, features = ["serde"] }
utoipa = { workspace = true, features = ["actix_extras", "chrono", "url", "uuid"] }
utoipa-swagger-ui = { workspace = true, features = ["actix-web"] }
uuid = { workspace = true, features = ["serde", "v4", "v5"] } # must be compatible with `bb8-postgres`
validator = { workspace = true, features = ["derive"] }
walkdir = { workspace = true }
zip = { workspace = true }
assert-json-diff = { workspace = true }
sha2 = { workspace = true }
convert_case = { workspace = true }
serde_path_to_error = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["socket"] }

[dev-dependencies]
assert_cmd = { workspace = true }
httptest = { workspace = true }
pretty_assertions = { workspace = true }
prost = { workspace = true }          # must be compatbile with aruna-rust-api
serial_test = { workspace = true }
tempfile = { workspace = true }
xml-rs = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true, features = ["build", "cargo", "emit_and_set"] }
vergen-gitcl = { workspace = true, features = ["build"] }

[[bench]]
name = "quota_check"
harness = false
required-features = ["pro"]

[lints]
workspace = true
